plugins {
    id 'org.flywaydb.flyway' version '5.2.4'
}

apply plugin: 'java'
apply plugin: 'idea'
apply plugin: 'org.springframework.boot'
apply plugin: 'io.spring.dependency-management'

group = 'com.genius.primavera'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '12'

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

tasks.withType(JavaCompile).each {
    it.options.compilerArgs.add('--enable-preview')
}

test {
    jvmArgs(['--enable-preview'])
}

bootRun {
    main = 'com.genius.primavera.PrimaveraApplication'
    jvmArgs(['--enable-preview'])
}

flyway {
    url = 'jdbc:mariadb://localhost:3306/primavera'
    user = 'primavera'
    password = 'primavera'
}

dependencies {
    implementation('org.springframework.boot:spring-boot-starter-web') {
        exclude module: "spring-boot-starter-tomcat"
    }
    implementation('org.springframework.boot:spring-boot-starter-aop')
    implementation('org.springframework.boot:spring-boot-starter-jdbc')
    implementation('org.springframework.boot:spring-boot-starter-json')
    implementation('org.springframework.boot:spring-boot-starter-data-jpa')
    implementation('org.springframework.boot:spring-boot-starter-data-mongodb')
    implementation('org.springframework.boot:spring-boot-starter-data-mongodb-reactive')
    implementation('org.springframework.boot:spring-boot-starter-webflux')
    implementation('org.springframework.boot:spring-boot-starter-thymeleaf')
    implementation('org.springframework.boot:spring-boot-devtools')
    implementation('org.springframework.boot:spring-boot-starter-security')
    compile('org.springframework.security.oauth.boot:spring-security-oauth2-autoconfigure:2.1.4.RELEASE')
    compile('org.thymeleaf.extras:thymeleaf-extras-springsecurity5:3.0.4.RELEASE')
    compile('org.springframework.boot:spring-boot-starter-undertow')
    compile("org.mybatis.spring.boot:mybatis-spring-boot-starter:2.0.1")
    compile("org.mybatis.dynamic-sql:mybatis-dynamic-sql:1.1.1")
    compile('org.mariadb.jdbc:mariadb-java-client:2.3.0')
    compile('nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect:2.3.0')
    compile('com.navercorp.lucy:lucy-xss-servlet:2.0.0')
    compile('org.modelmapper:modelmapper:2.3.3')
    compile('org.flywaydb:flyway-core:5.2.4')
    compileOnly('org.projectlombok:lombok')
    annotationProcessor('org.projectlombok:lombok')
    testImplementation('org.springframework.boot:spring-boot-starter-test') {
        exclude module: 'junit'
    }
    testImplementation('org.springframework.security:spring-security-test')
    testCompile('io.rest-assured:rest-assured:3.3.0')
}